--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ test {
 
 }
 
+
+
 dependencies {
     compile("io.qameta.allure:allure-java-commons:2.13.5")
     compile("io.qameta.allure:allure-rest-assured:2.13.5")
@@ -43,4 +45,10 @@ dependencies {
     compile("org.junit.jupiter:junit-jupiter-api:5.3.0")
     compile("org.junit.jupiter:junit-jupiter-engine:5.3.0")
     compile("org.junit.jupiter:junit-jupiter-params:5.3.0")
+}
+
+task tests(type: Test){
+    useJUnitPlatform {
+        includeTags 'Google'
+    }
 }
