replace to yandex

--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,6 @@ dependencies {
 
 task tests(type: Test){
     useJUnitPlatform {
-        includeTags 'Google'
+        includeTags 'Yandex'
     }
 }
