--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,10 @@ dependencies {
     compile("org.junit.jupiter:junit-jupiter-params:5.3.0")
 }
 
+tasks.withType(Test){
+    systemProperties = System.properties
+}
+
 task tests(type: Test){
     useJUnitPlatform {
         includeTags 'Yandex'
