--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     compile("org.junit.jupiter:junit-jupiter-api:5.3.0")
     compile("org.junit.jupiter:junit-jupiter-engine:5.3.0")
     compile("org.junit.jupiter:junit-jupiter-params:5.3.0")
+
+    testImplementation ("io.qameta.allure:allure-selenide:2.13.5")
 }
 
 tasks.withType(Test){
