--- a/build.gradle
+++ b/build.gradle
@@ -57,4 +57,6 @@ task tests(type: Test){
     useJUnitPlatform {
         includeTags 'Yandex'
     }
+
+//    systemProperty("remote_driver_url","https://user1:1234@selenoid.autotests.cloud:4444/wd/hub/")
 }
